static/css/local.css
body {
  border:0;
  margin:0;
  padding:0;
}

hgroup {
  text-align: center;
}

header {
  background: url(/img/header.jpg) repeat center;
  margin-bottom: 40px;
  padding: 1px;
  -webkit-font-smoothing: antialiased;
}

header > h1 {
  margin-left:10%;
  font-family: 'Lobster', cursive;
}

.help-text {
  margin-left:10px;
}

.help-error {
  color: #B94A48;
}

.help-warning {
  color: #F89406
}

.help-ok {
  color: #468847
}

